0.45.1 : fixed minor layout bug

--- a/src/app/mainpage/mainpage.component.scss
+++ b/src/app/mainpage/mainpage.component.scss
@@ -51,7 +51,7 @@
 
 .leftContainer{
   padding: 5px;
-  flex-grow:1;
+  flex-grow:0;
   display:flex;
   flex-direction: column;
   flex-basis:80%; // is ignored by firefox
@@ -68,7 +68,7 @@
   overflow-y:hidden;
 }
 
-rightContainer{
+.rightContainer{
   flex-basis:20%; // is ignored by firefox
   min-width:20%;
 }
